[package]
name = "q-diffusion-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.80"
candle-core = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes" }
candle-datasets = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes" }
candle-einops = "0.1.1"
candle-flash-attn = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes", optional = true }
candle-nn = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes" }
candle-onnx = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes", optional = true }
candle-transformers = { git = "https://github.com/tomsanbear/candle", branch = "AddMetalConvDtypes" }
clap = "4.5.1"
cudarc = { version = "0.10.0", optional = true }
half = "2.4.0"
hf-hub = "0.3.2"
image = "0.25.0"
intel-mkl-src = { version = "0.8.1", optional = true }
kdam = "0.5.1"
num_cpus = "1.16.0"
pretty_trace = "0.5.23"
rand = "0.8.5"
serde = "1.0.197"
tokenizers = "0.15.2"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal"]
