[package]
name = "q-diffusion-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
candle-transformers = { path = "../../huggingface/candle/candle-transformers" }
candle-datasets = { path = "../../huggingface/candle/candle-datasets" }
candle-core = { path = "../../huggingface/candle/candle-core" }
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.80"
candle-einops = "0.1.1"
candle-flash-attn = { path = "../../huggingface/candle/candle-flash-attn", optional = true }
candle-nn = { path = "../../huggingface/candle/candle-nn" }
candle-onnx = { path = "../../huggingface/candle/candle-onnx", optional = true }
clap = "4.5.1"
cudarc = { version = "0.10.0", optional = true }
half = "2.4.0"
hf-hub = "0.3.2"
image = "0.25.0"
intel-mkl-src = { version = "0.8.1", optional = true }
kdam = "0.5.1"
num_cpus = "1.16.0"
pretty_trace = "0.5.23"
rand = "0.8.5"
serde = "1.0.197"
tokenizers = "0.15.2"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal"]
